sidebar overflow on mobile screen fix

--- a/website/ajfc/css/style.css
+++ b/website/ajfc/css/style.css
@@ -945,6 +945,10 @@ section#calendar-wrapper .calendar-info .calendar-info--inner {
   color: white;
   padding-bottom: 99999px;
   margin-bottom: -99999px; }
+  @media (max-width: 991px) {
+    .sidebar {
+      padding-bottom: 48px;
+      margin-bottom: 0; } }
   .sidebar .sidebar-item .sidebar-item--header h1, .sidebar .sidebar-item .sidebar-item--header h2, .sidebar .sidebar-item .sidebar-item--header h3, .sidebar .sidebar-item .sidebar-item--header h4, .sidebar .sidebar-item .sidebar-item--header h5, .sidebar .sidebar-item .sidebar-item--header h6, .sidebar .sidebar-item .sidebar-item--header p {
     margin: 0;
     padding: 0;
